--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
+    "@expo-google-fonts/cabin": "^0.2.2",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-reanimated-carousel": "^3.0.3",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0"
   },
   "devDependencies": {
