--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-paper": "^4.12.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper-flatlist": "^3.0.17",
     "react-native-web": "0.17.7",
