--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   },
   "dependencies": {
     "@expo-google-fonts/cabin": "^0.2.2",
+    "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/native": "^6.0.11",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-paper": "^4.12.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper-flatlist": "^3.0.17",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
