--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/cabin": "^0.2.2",
+    "@expo/ngrok": "^2.5.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.4.3",
@@ -28,9 +29,10 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-accordion-list-view": "^1.0.4",
+    "react-native-accordion-view": "^1.1.9",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.2",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-redash": "^18.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^3.9.1",
